# hello_opengl

./: CMakeLists.txt  glad.c  main.cpp
hello_triangle/: hello_triangle_indexed.cpp  hello_triangle_indexed.h
